text align fix

--- a/assets/scss/content-with-image.scss
+++ b/assets/scss/content-with-image.scss
@@ -72,6 +72,12 @@
   .content-with-image {
     flex-direction: column-reverse;
 
+    .content {
+      .text {
+        text-align: left;
+      }
+    }
+
     & > div {
       width: 100%;
     }
